# 10k-processing

./: .gitignore  README.md  extract_bookmarks.py  extract_links_from_toc.py  extracting_sections_from_10k.ipynb  prompts.yaml  pyproject.toml  sec_10k_item_descriptions.yaml  understanding_10ks.ipynb
pydantic_models/: item_10k.py
